# LB2D_Framework

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LB2D  Makefile  main.cpp  simulation.hpp  visualization.hpp
.deps/: EasyBMP.P  main.P
ex1/: 1d_lbm_shock_tube.jl
report/: plot_convergence.jl  plots.jl  report.odt  t_10_re_1e2.csv  t_10_re_1e4.csv
report/data/: KBC_1e4_t10.csv  KBC_1e5_t30.csv  force_vs_velocity.csv  re_30000_lbgk.csv  re_30000_lbgk_t_100.csv  t_100_re_1e12_kbc.csv  t_100_re_1e2.csv  t_100_re_1e4.csv  t_100_re_1e5_kbc.csv  t_30_re_1e5_kbc.csv
src/: H_root.hpp  global.hpp  lattice.hpp  main.cpp  mathutils.h  runner.hpp  shader.hpp  simulation.hpp  timer.hpp  velocity_set.hpp  visualization.hpp
